Disable tests for non-standard behaviour of dirname(3)/basename(3).

The NetBSD ATF tests explicitly check that these functions do not modify
their input. These tests are NetBSD-specific. They test for something
that is not part of POSIX.

PR:		211873
Reviewed by:	ngie
Differential Revision:	https://reviews.freebsd.org/D7506

Former-commit-id: 9c938b561b83b0cd4c98ac17a707d11062436ea5